--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Booking</a>
+        <a class="nav-link" href="#">Boking</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Activity</a>
